feat(ai2sql): 新增AI生成SQL功能及相关文档
新增AI生成SQL的Jupyter Notebook实现，包括数据库连接、表结构获取和DeepSeek API集成
添加栈算法的JavaScript实现和文档说明
补充JavaScript中this关键字的文档说明

--- a/python/text2sql/test2sql.ipynb
+++ b/python/text2sql/test2sql.ipynb
@@ -26,6 +26,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "8c72f5d8-17c6-4850-b1a6-73d5581706c3",
+   "metadata": {
+    "ExecutionIndicator": {
+     "show": false
+    },
+    "execution": {
+     "iopub.execute_input": "2025-12-04T11:48:06.696295Z",
+     "iopub.status.busy": "2025-12-04T11:48:06.695813Z",
+     "iopub.status.idle": "2025-12-04T11:48:06.705485Z",
+     "shell.execute_reply": "2025-12-04T11:48:06.704864Z",
+     "shell.execute_reply.started": "2025-12-04T11:48:06.696250Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# coding\n",
+    "import sqlite3\n",
+    "# 连接数据库\n",
+    "conn = sqlite3.connect(\"test.db\")\n",
+    "# 创建一个游标对象，用于执行sql，获取查询结果\n",
+    "cursor = conn.cursor\n",
+    "# 员工表\n",
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS employees(\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    name TEXT,\n",
+    "    department TEXT,\n",
+    "    salary INTEGER\n",
+    ")\n",
+    "\"\"\")\n",
+    "\n",
+    "sample_data = [ \n",
+    "    (6, \"黄佳\", \"销售\", 50000), \n",
+    "    (7, \"宁宁\", \"工程\", 75000), \n",
+    "    (8, \"谦谦\", \"销售\", 60000), \n",
+    "    (9, \"悦悦\", \"工程\", 80000), \n",
+    "    (10, \"黄仁勋\", \"市场\", 55000),\n",
+    "    (11, \"曾繁华\", \"工程\", 80000)\n",
+    "]\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "00d53f3a-177d-4f0b-81bb-19d3eded5fc6",
    "metadata": {
@@ -138,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "277d1101-3e35-428b-baf9-2f1c0d3f2f40",
    "metadata": {
     "ExecutionIndicator": {
@@ -187,6 +235,7 @@
     "# 最后加上一个换行和右括号 \")\"，组成完整的建表语句（虽然不能直接执行，但看起来很清晰）\n",
     "schema_str = \"CREATE TABLE EMPLOYEES (\\n\" + \"\\n\".join([f\"{col[1]} {col[2]}\" for col in schema]) + \"\\n)\"\n",
     "\n",
+    "# 打印提示文字\n",
     "print(\"数据库Schema:\")\n",
     "\n",
     "# 打印我们刚刚构造好的表结构字符串\n",
@@ -195,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b84dd147-6f40-4b11-9ae7-93b26a9547ce",
    "metadata": {
     "ExecutionIndicator": {
@@ -221,7 +270,14 @@
     }
    ],
    "source": [
+    "# 定义一个函数，名字叫 ask_deepseek\n",
+    "# 它有两个输入参数：\n",
+    "#   - query：用户提出的问题（比如“开发部门员工的姓名和工资是多少？”）\n",
+    "#   - schema：数据库表的结构描述（比如有哪些列、列叫什么、是什么类型）\n",
     "def ask_deepseek(query, schema):\n",
+    "    \n",
+    "    # 构造一个“提示词”（prompt），准备发给大模型（比如 DeepSeek、ChatGPT 等）\n",
+    "    # 使用 f-string（格式化字符串）把 schema 和 query 动态插入进去\n",
     "    prompt = f\"\"\"\n",
     "    这是一个数据库的Schema:\n",
     "    {schema}\n",
@@ -229,6 +285,8 @@
     "    只输出SQL查询，不要输出任何其他内容，也不要带任何格式。\n",
     "    问题:{query}\n",
     "    \"\"\"\n",
+    "    # 打印这个提示词到屏幕上（方便我们看 AI 会收到什么指令）\n",
+    "    # print(prompt)\n",
     "    response = client.chat.completions.create(\n",
     "        model=\"deepseek-reasoner\",\n",
     "        max_tokens=2048,\n",
@@ -240,6 +298,13 @@
     "        ]\n",
     "    )\n",
     "    return response.choices[0].message.content\n",
+    "\n",
+    "\n",
+    "# 调用刚才定义的函数\n",
+    "# 传入两个参数：\n",
+    "#   - 第一个参数是用户的问题（字符串）\n",
+    "#   - 第二个参数是之前从数据库拿到的表结构（变量 schema）\n",
+    "# ask_deepseek(\"开发部部门员工的姓名和工资是多少？\", schema)\n",
     "question = \"开发部部门员工的姓名和工资是多少？\"\n",
     "sql = ask_deepseek(question, schema_str)\n",
     "print(\"生成的sql查询: \")\n",
