--- a/python/ai2sql/ai2sql.ipynb
+++ b/python/ai2sql/ai2sql.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c379685e-16ac-48dc-bcbb-b6d7a0b8d563",
    "metadata": {
     "execution": {
@@ -422,7 +422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -436,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
