fix(ai2sql): 修复因缺少ipykernel包导致的错误
移除导致错误的代码示例，替换为正确的错误提示信息

--- a/python/ai2sql/ai2sql.ipynb
+++ b/python/ai2sql/ai2sql.ipynb
@@ -282,23 +282,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    这是一个数据库的Schema:\n",
-      "    CREATE TABLE EMPLOYEES(\n",
-      "id INTEGER\n",
-      "name TEXT\n",
-      "department TEXT\n",
-      "salary INTEGER\n",
-      ")\n",
-      "    根据这个Schema,请输出一个SQL查询来回答以下问题。\n",
-      "    只输出SQL查询语句本身，不要使用任何Markdown格式，\n",
-      "    不要包含反引号、代码块标记或额外说明。\n",
-      "    问题：在销售部门增加一个新员工，姓名为张三，工资为45000\n",
-      "    \n",
-      "INSERT INTO EMPLOYEES (name, department, salary) VALUES ('张三', '销售', 45000);\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.0' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages."
      ]
     }
    ],
