--- a/python/ai2sql/ai2sql.ipynb
+++ b/python/ai2sql/ai2sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "970a88df-b44b-4920-8b1b-b812212914b3",
    "metadata": {
     "execution": {
@@ -14,7 +14,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.0' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/Users/15817/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "from openai import OpenAI\n",
     "# openai sdk 是大模型的接口标准，completion/chat\n",
@@ -26,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "8ea58b44-e675-4cf8-97dd-5849bcb0e39e",
    "metadata": {
     "ExecutionIndicator": {
@@ -41,19 +52,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "database is locked",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mOperationalError\u001b[39m                          Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[31]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m cursor = conn.cursor()\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# 员工表\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[43mcursor\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\"\"\u001b[39;49m\n\u001b[32m      9\u001b[39m \u001b[33;43mCREATE TABLE IF NOT EXISTS employees(\u001b[39;49m\n\u001b[32m     10\u001b[39m \u001b[33;43m    id INTEGER PRIMARY KEY,\u001b[39;49m\n\u001b[32m     11\u001b[39m \u001b[33;43m    name TEXT,\u001b[39;49m\n\u001b[32m     12\u001b[39m \u001b[33;43m    department TEXT,\u001b[39;49m\n\u001b[32m     13\u001b[39m \u001b[33;43m    salary INTEGER\u001b[39;49m\n\u001b[32m     14\u001b[39m \u001b[33;43m)\u001b[39;49m\n\u001b[32m     15\u001b[39m \u001b[33;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# list 列表\u001b[39;00m\n\u001b[32m     18\u001b[39m sample_data = [ \n\u001b[32m     19\u001b[39m     \u001b[38;5;66;03m# 元组（tuple） 是一种有序的、不可变的序列类型\u001b[39;00m\n\u001b[32m     20\u001b[39m     (\u001b[32m6\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m黄佳\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m销售\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m50000\u001b[39m), \n\u001b[32m   (...)\u001b[39m\u001b[32m     25\u001b[39m     (\u001b[32m11\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m曾繁华\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m工程\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m80000\u001b[39m)\n\u001b[32m     26\u001b[39m ]\n",
-      "\u001b[31mOperationalError\u001b[39m: database is locked"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# coding\n",
     "import sqlite3\n",
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e35ad329-de68-4bf2-8a60-4277f3d635b4",
    "metadata": {
     "ExecutionIndicator": {
@@ -109,21 +108,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(0, 'id', 'INTEGER', 0, None, 1), (1, 'name', 'TEXT', 0, None, 0), (2, 'department', 'TEXT', 0, None, 0), (3, 'salary', 'INTEGER', 0, None, 0)]\n",
-      "CREATE TABLE EMPLOYEES(\n",
-      "id INTEGER\n",
-      "name TEXT\n",
-      "department TEXT\n",
-      "salary INTEGER\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# text2sql 给大模型提供什么？上下文context\n",
     "# 大模型会sql，gemini 博士级别\n",
@@ -150,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "4cd0d78c-f549-4f8a-9b99-b7fca86376bf",
    "metadata": {
     "ExecutionIndicator": {
@@ -191,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "74394bf2-373a-4fa8-a998-91db2e76b449",
    "metadata": {
     "ExecutionIndicator": {
@@ -206,28 +191,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    这是一个数据库的Schema:\n",
-      "    CREATE TABLE EMPLOYEES(\n",
-      "id INTEGER\n",
-      "name TEXT\n",
-      "department TEXT\n",
-      "salary INTEGER\n",
-      ")\n",
-      "    根据这个Schema,请输出一个SQL查询来回答以下问题。\n",
-      "    只输出SQL查询语句本身，不要使用任何Markdown格式，\n",
-      "    不要包含反引号、代码块标记或额外说明。\n",
-      "    问题：工程部门员工的姓名和工资是多少\n",
-      "    \n",
-      "SELECT name, salary FROM EMPLOYEES WHERE department = '工程';\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "question = \"工程部门员工的姓名和工资是多少\"\n",
     "sql_query = ask_deepseek(question, schema_str)\n",
@@ -236,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ad1072d8-7be0-44b4-82f5-38b654c66b5a",
    "metadata": {
     "ExecutionIndicator": {
@@ -251,15 +215,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('宁宁', 75000), ('悦悦', 80000), ('曾繁华', 80000)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ai 生成 sql 能力嵌入开发流程中\n",
     "results = cursor.execute(sql_query).fetchall()\n",
@@ -280,17 +236,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.13.0' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "question = \"在销售部门增加一个新员工，姓名为张三，工资为45000\"\n",
     "sql_question = ask_deepseek(question, schema_str)\n",
@@ -299,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "729a0969-3c7c-442e-aec2-fc7743276f41",
    "metadata": {
     "ExecutionIndicator": {
@@ -333,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "dbc6362e-3809-4758-96a2-96471d316714",
    "metadata": {
     "ExecutionIndicator": {
@@ -348,39 +294,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    这是一个数据库的Schema:\n",
-      "    CREATE TABLE EMPLOYEES(\n",
-      "id INTEGER\n",
-      "name TEXT\n",
-      "department TEXT\n",
-      "salary INTEGER\n",
-      ")\n",
-      "    根据这个Schema,请输出一个SQL查询来回答以下问题。\n",
-      "    只输出SQL查询语句本身，不要使用任何Markdown格式，\n",
-      "    不要包含反引号、代码块标记或额外说明。\n",
-      "    问题：删除市场部门的黄仁勋\n",
-      "    \n",
-      "DELETE FROM EMPLOYEES WHERE department = '市场' AND name = '黄仁勋';\n"
-     ]
-    },
-    {
-     "ename": "OperationalError",
-     "evalue": "database is locked",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mOperationalError\u001b[39m                          Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m sql_query = ask_deepseek(question, schema_str)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(sql_query)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mcursor\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43msql_query\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m conn.commit()\n",
-      "\u001b[31mOperationalError\u001b[39m: database is locked"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "question = \"删除市场部门的黄仁勋\"\n",
     "sql_query = ask_deepseek(question, schema_str)\n",
